# imfidata

./: .gitignore  README.md  README.qmd  clean.py  dirs.txt  pyproject.toml
src/imfidata/: __init__.py  auth.py  imfclient.py  metadata.py  retrieval.py  sdmx_client.py  utils.py
